--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,8 @@
-p{
-    color: crimson;
-    font-weight: bold;
-    
+.card {
+  background-color: aquamarine;
 }
 
+p {
+  color: crimson;
+  font-weight: bold;
+}
