--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,18 @@
 <div class="container">
-  
-      <div class="card" style="background-color: aquamarine">
-        <div class="card-body">
-          <h3 class="card-title">Parent Component (AppComponent)</h3>
-          <input type="text" size="60rem">
-         
-          <p>This is the message from the Child: <em></em></p>
-          
-          <div class="container">
-              <div class="row">
-                <div class="col">
-                  <app-childcomponent ></app-childcomponent>
-                </div>
+  <div class="card" >
+    <div class="card-body">
+      <h3 class="card-title">Parent Component (AppComponent)</h3>
+      <input type="text" class="form-control w-75" />
 
-              </div>
+      <p>This is the message from the Child: <em></em></p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <app-childcomponent></app-childcomponent>
           </div>
         </div>
       </div>
-  
+    </div>
+  </div>
 </div>
-
