--- a/src/app/childcomponent/childcomponent.component.html
+++ b/src/app/childcomponent/childcomponent.component.html
@@ -1,15 +1,14 @@
-<div class="card" style="background-color: bisque">
+<div class="card">
   <div class="card-body">
-    <h3 class="card-type">Child Component</h3>
+    <h3 class="card-title">Child Component</h3>
     <div class="card-body">
-      <p>This is the message from the Parent: </p>
+      <p>This is the message from the Parent:</p>
       <div>
-        <input type="text" size="40rem">
+        <input type="text" class="form-control w-75" />
       </div>
       <div>
         <button class="btn btn-primary">Send Message!</button>
       </div>
     </div>
   </div>
-
 </div>
